# underwater_bonanza

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  underwater_bonanza
.cache/clangd/index/: Camera.cpp.DAB17D64C339636E.idx  Camera.h.FDDDA12FFD6E4A65.idx  GenerateTerrain.h.A17FCB8957FFA883.idx  Graphics.hpp.B944200DA5918FAA.idx  Input.hpp.A19FC184EAEF3B3E.idx  Leaf.h.95C5C24B14C31BCE.idx  Light.cpp.CB88004B02C73C10.idx  Light.h.D6D17D1D60520513.idx  Math.hpp.6618D1E8A3BE5EC4.idx  Renderer.cpp.FAA980F5C06339C1.idx  Renderer.h.8BD195EE3ED22E3A.idx  Screen.cpp.336C0D2DBD695250.idx  Screen.h.EBA1A14052E68637.idx  Shader.cpp.4C72EEAB11B43386.idx  Shader.h.B87F7913435855C3.idx  Texture.cpp.97D97E6C97F202A2.idx  Texture.h.4ED3DB1FA5F10F4E.idx  Transform.hpp.EDF76C498E5B1DB7.idx  Vertex.h.9A1217FA4E7A1663.idx  VisualCube.cpp.99057B75D6F7388A.idx  VisualCube.h.C238A7FF8C87C70E.idx  VisualGrid.cpp.5B0A23FCAD623615.idx  VisualGrid.h.DF0C2CA80DB69D59.idx  VisualLine.cpp.7BB58C070B4E7EFA.idx  VisualLine.h.5143AE529E91817B.idx  VisualObject.cpp.FCB60D5FB5C6D758.idx  VisualObject.h.B1731A1E6601762A.idx  VisualPlane.cpp.0AFA2943ABE26016.idx  VisualPlane.h.C7825B3FB894B7B0.idx  VisualSphere.cpp.79B3B91D19549780.idx  VisualSphere.h.F3D9A91D5571CF15.idx  YAndNormal.h.2AD186AE6ADFC83F.idx  _fixes.hpp.3DFD2D6350AC5FE7.idx  _noise.hpp.54E743AA167A4CC4.idx  _vectorize.hpp.559DE4260B0ECB5B.idx  cocoa_init.m.8120E217791E1D9D.idx  cocoa_joystick.h.CF47651C596D22A4.idx  cocoa_joystick.m.C716C517F3ECB88F.idx  cocoa_monitor.m.E837436025A9B5D2.idx  cocoa_platform.h.9C4AFCE8C329013F.idx  (+212 more)
animals/: Animal.cpp  lab04.cpp
animals/shaders/: FragmentShader.glsl  VertexShader.glsl
assets/models/: boat.mtl  fishWire.mtl
shaders/: default.frag  default.vert
shaders/grid/: grid.frag  grid.vert
shaders/line/: line.frag  line.vert
shaders/lit/: lit.frag  lit.vert
shaders/model/: model.frag
shaders/ocean/: ocean.frag  ocean.vert
shaders/screen/: screen.frag  screen.vert
shaders/shadows/: shadow_mapper.frag  shadow_mapper.vert
shaders/skybox/: skybox.vert
shaders/terrain/: lit.frag
shaders/unlit/: unlit.frag  unlit.vert
source/: main.cpp
source/Components/: Camera.cpp  Camera.h  Light.cpp  Light.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
source/Components/Animal/: Animal.hpp
source/Utility/: Graphics.hpp  Input.hpp  Math.hpp  Transform.hpp
terrain stuff/src/: Camera.cpp  Camera.h  GenerateTerrain.cpp  GenerateTerrain.h  Line.cpp  Line.h  Vertex.h  marching_cubes.cpp
(+22 files in other folders)
